make change in rank service to serv docs text as ranked

--- a/rank.ipynb
+++ b/rank.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-16T15:14:02.662Z"
+     "start_time": "2018-11-21T21:06:27.200Z"
     }
    },
    "outputs": [
@@ -25,8 +25,14 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13570/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [16/Nov/2018 17:14:28] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [16/Nov/2018 17:14:39] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [21/Nov/2018 23:06:31] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title_normalized': 'продавец консультант в магазин спортивного питания', 'lang_text': 'ru', 'title': 'Продавец-консультант в магазин спортивного питания', 'salary_val2': '', 'id': '-7863101350915933915', 'lang_title': 'ru', 'salary_val1': '400', 'url': 'https://minsk.jobs.tut.by/vacancy/19302396', 'text': 'В магазин спортивного питания требуется продавец-консультант с опытом работы.\\r\\nСобеседование после рассмотрения резюме.\\r\\nТребования:\\r\\n~Опыт в прямых продажах от 1 года;\\r\\n~Желание действительно помогать людям, давать консультации, искать лучшие решения;\\r\\n~Знания о спортпите, заинтересованность;\\r\\n~Грамотная речь, корректность, инициативность;\\r\\n~Уверенный пользователь ПК;\\r\\n\\r\\nОбязанности:\\r\\n~Консультация клиентов в магазине, по телефону и онлайн;\\r\\n~Продажа продуктов спортивного питания;\\r\\n~Выкладка товара;\\r\\n~Работа с кассой, программой учета товара и сайтом;\\r\\n~Поддержание чистоты и порядка в магазине;\\r\\n~Выполнение плана продаж;\\r\\n\\r\\nУсловия:\\r\\n~Заработная плата = оклад + бонус;\\r\\n~Оформление по ТК;\\r\\n~Большие скидки на нашу продукцию;\\r\\n~График 2/2. Продолжительность рабочего дня согласно режиму работы ТЦ;\\r\\n~Работа в комфортных условиях, ТРЦ \"Arena City\" .\\r\\n\\r\\n', 'company_name': 'Монте-Кристо'}\n"
      ]
     }
    ],
@@ -40,7 +46,7 @@
     "from paper.config import *\n",
     "\n",
     "# update index with eval_textes.csv for testing\n",
-    "index.from_eval_texts()\n",
+    "# index.from_eval_texts()\n",
     "\n",
     "\n",
     "app = Flask(__name__)\n",
@@ -61,9 +67,8 @@
     "        \n",
     "        docs_ids = index.search(stemmed_query)\n",
     "        docs = index.get_docs(docs_ids)\n",
-    "        # --- TODO: implement rank here ----\n",
-    "        ranked = list(docs)\n",
-    "\n",
+    "        print(docs[0])\n",
+    "        ranked = [doc['text'] for doc in docs]\n",
     "        return json.dumps({'status':'ok', 'ranked': ranked})\n",
     "    else:\n",
     "        return \"post json {'meta': meta, 'stemmed_query': stemmed_query}\"\n",
