--- a/rank.ipynb
+++ b/rank.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-21T21:06:27.200Z"
+     "start_time": "2018-11-22T09:26:24.520Z"
     }
    },
    "outputs": [
@@ -25,14 +25,14 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13570/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [21/Nov/2018 23:06:31] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [22/Nov/2018 11:26:43] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title_normalized': 'продавец консультант в магазин спортивного питания', 'lang_text': 'ru', 'title': 'Продавец-консультант в магазин спортивного питания', 'salary_val2': '', 'id': '-7863101350915933915', 'lang_title': 'ru', 'salary_val1': '400', 'url': 'https://minsk.jobs.tut.by/vacancy/19302396', 'text': 'В магазин спортивного питания требуется продавец-консультант с опытом работы.\\r\\nСобеседование после рассмотрения резюме.\\r\\nТребования:\\r\\n~Опыт в прямых продажах от 1 года;\\r\\n~Желание действительно помогать людям, давать консультации, искать лучшие решения;\\r\\n~Знания о спортпите, заинтересованность;\\r\\n~Грамотная речь, корректность, инициативность;\\r\\n~Уверенный пользователь ПК;\\r\\n\\r\\nОбязанности:\\r\\n~Консультация клиентов в магазине, по телефону и онлайн;\\r\\n~Продажа продуктов спортивного питания;\\r\\n~Выкладка товара;\\r\\n~Работа с кассой, программой учета товара и сайтом;\\r\\n~Поддержание чистоты и порядка в магазине;\\r\\n~Выполнение плана продаж;\\r\\n\\r\\nУсловия:\\r\\n~Заработная плата = оклад + бонус;\\r\\n~Оформление по ТК;\\r\\n~Большие скидки на нашу продукцию;\\r\\n~График 2/2. Продолжительность рабочего дня согласно режиму работы ТЦ;\\r\\n~Работа в комфортных условиях, ТРЦ \"Arena City\" .\\r\\n\\r\\n', 'company_name': 'Монте-Кристо'}\n"
+      "{'title_normalized': 'главный бухгалтер', 'lang_text': 'ru', 'title': 'Главный бухгалтер', 'salary_val2': '', 'id': '-2573148200323682461', 'lang_title': 'ru', 'salary_val1': '', 'url': 'https://minsk.jobs.tut.by/vacancy/19302349', 'text': 'Обязанности:\\r\\n#Осуществление организации бухгалтерского учета хозяйственно-финансовой деятельности предприятия и контроль над экономным использованием материальных, трудовых и финансовых ресурсов, сохранностью собственности предприятия.\\r\\n#Формирование в соответствии с законодательством о бухгалтерском учете учетную политику, исходя из структуры и особенностей деятельности предприятия, необходимости обеспечения его финансовой устойчивости.\\r\\n#Возглавляет работу по: - подготовке и принятию рабочего плана счетов, форм первичных учетных документов, применяемых для оформления хозяйственных операций, по которым не предусмотрены типовые формы документов внутренней бухгалтерской отчетности; --контролю за проведением хозяйственных операций, соблюдением технологии обработки бухгалтерской информации и порядка документооборота.\\r\\n#Обеспечивает: - рациональную организацию бухгалтерского учета и отчетности в организации на основе применения современных технических средств и информационных технологий, прогрессивных форм и методов учета и контроля;- формирование и своевременное представление полной и достоверной бухгалтерской информации о деятельности организации, его имущественном положении, доходах и расходах;- разработку и осуществление мероприятий, направленных на укрепление финансовой дисциплины.\\r\\n#Организует:-учет имущества обязательств и хозяйственных операций, поступающих основных средств, товарно-материальных ценностей и денежных средств; - своевременное отражение на счетах бухгалтерского учета операций, связанных с их движением; Обеспечивает: -законность, своевременность и правильность оформления документов, составление экономически обоснованных отчетных калькуляций себестоимости работ (услуг), расчеты по заработной плате,правильное начисление и перечисление налогов и сборов, платежей в банковские учреждения.\\r\\n#Осуществляет контроль над:- соблюдением порядка оформления первичных и бухгалтерских документов, расчетов и платежных обязательств, расходованием фонда оплаты труда.\\r\\n#Участвует в проведении экономического анализа хозяйственно-финансовой деятельности предприятия по данным бухгалтерского учета и отчетности в целях выявления внутрихозяйственных резервов, устранения потерь и непроизводительных затрат.\\r\\n#Осуществляет: -взаимодействие с банками по вопросам размещения свободных финансовых средств на банковских депозитных вкладах. Ведет работу по обеспечению строгого соблюдения штатной, финансовой и кассовой дисциплины.\\r\\n#Участвует в разработке и внедрении рациональной плановой и учетной документации, прогрессивных форм и методов ведения бухгалтерского учета на основе применения современных средств вычислительной техники.\\r\\n#Обеспечивает составление баланса, отчетов о доходах расходах средств.\\r\\n\\r\\n', 'company_name': 'Республиканский Союз ТС и ЖПК'}\n"
      ]
     }
    ],
