--- a/search.ipynb
+++ b/search.ipynb
@@ -5,7 +5,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-21T20:34:55.858Z"
+     "start_time": "2018-11-22T09:26:22.208Z"
     },
     "scrolled": true
    },
@@ -26,33 +26,8 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "[2018-11-21 23:05:35,020] ERROR in app: Exception on /search [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1815, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1718, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/_compat.py\", line 35, in reraise\n",
-      "    raise value\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1813, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-2-087ff7a4927c>\", line 36, in search\n",
-      "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
-      "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
-      "    json=json).text)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/__init__.py\", line 354, in loads\n",
-      "    return _default_decoder.decode(s)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 339, in decode\n",
-      "    obj, end = self.raw_decode(s, idx=_w(s, 0).end())\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
-      "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
-      "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "127.0.0.1 - - [21/Nov/2018 23:05:35] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
-      "127.0.0.1 - - [21/Nov/2018 23:06:31] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [22/Nov/2018 11:26:30] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 11:26:43] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
