--- a/analyzer_query.ipynb
+++ b/analyzer_query.ipynb
@@ -10,30 +10,24 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: Do not use the development server in a production environment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13571/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [22/Nov/2018 17:15:19] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:15:53] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:20:03] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:21:45] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:21:56] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:22:32] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:09] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:10] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:23] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:47] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:25:33] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:25:36] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:25:52] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:21] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:28] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:28] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:42] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:49] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:34:19] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:34:54] \"POST /analyze HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [21/Nov/2018 22:34:27] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [21/Nov/2018 22:34:45] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [21/Nov/2018 23:05:35] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -45,8 +39,11 @@
     "from flask import Flask\n",
     "from flask import request\n",
     "\n",
+    "import nltk\n",
+    "from nltk import wordpunct_tokenize\n",
+    "\n",
     "from paper.config import *\n",
-    "from paper.analyze import normalize\n",
+    "from paper.analyze import normalize_and_stemm\n",
     "from paper.utils import post_request\n",
     "\n",
     "\n",
@@ -54,7 +51,7 @@
     "\n",
     "regex = re.compile('[!,/\\().%]')\n",
     "\n",
-    "@app.route(ANALYZER_PATH, methods=['GET', 'POST'])\n",
+    "@app.route(ANALYZER_QUERY_PATH, methods=['GET', 'POST'])\n",
     "def analyze():\n",
     "    \"\"\"\n",
     "    Analyzer provide stemm, tokenize and lang detect workflow\n",
@@ -65,26 +62,19 @@
     "    if request.method=='POST':\n",
     "        data = request.json\n",
     "        \n",
-    "        textes = data[\"textes\"]\n",
-    "        textes = [normalize(text) for text in textes]\n",
+    "        query = data[\"query\"]\n",
     "        \n",
-    "        textes_json = {'textes' : textes}\n",
-    "        r_lang = post_request(LANGDETECT_PORT, LANGDETECT_PATH, textes_json)\n",
-    "        langs = r_lang['langs']\n",
+    "        stemmed_query = normalize_and_stemm(query)\n",
     "        \n",
-    "        stemm_json = {'textes' : textes, 'langs': langs}\n",
-    "        r_stemmed = post_request(STEMMER_PORT, STEMMER_PATH, stemm_json)\n",
-    "        stemmed_docs = r_stemmed['stemmed']\n",
-    "\n",
     "        return json.dumps({'status':'ok',\n",
     "                           'langs': langs,\n",
-    "                           'stemmed_docs': stemmed_docs})\n",
+    "                           'stemmed_query': stemmed_query})\n",
     "    else:\n",
     "        return \"post json {textes: 'your text here'}\"\n",
     "    \n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    app.run(host='0.0.0.0', port=ANALYZER_PORT)"
+    "    app.run(host='0.0.0.0', port=ANALYZER_QUERY_PORT)"
    ]
   }
  ],
