--- a/rank.ipynb
+++ b/rank.ipynb
@@ -10,29 +10,46 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://0.0.0.0:13570/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [22/Nov/2018 19:08:32] \"POST /rank HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: Do not use the development server in a production environment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
+      "['водител', 'такс']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:13570/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [21/Nov/2018 23:06:31] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [22/Nov/2018 19:08:37] \"POST /rank HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'title_normalized': 'продавец консультант в магазин спортивного питания', 'lang_text': 'ru', 'title': 'Продавец-консультант в магазин спортивного питания', 'salary_val2': '', 'id': '-7863101350915933915', 'lang_title': 'ru', 'salary_val1': '400', 'url': 'https://minsk.jobs.tut.by/vacancy/19302396', 'text': 'В магазин спортивного питания требуется продавец-консультант с опытом работы.\\r\\nСобеседование после рассмотрения резюме.\\r\\nТребования:\\r\\n~Опыт в прямых продажах от 1 года;\\r\\n~Желание действительно помогать людям, давать консультации, искать лучшие решения;\\r\\n~Знания о спортпите, заинтересованность;\\r\\n~Грамотная речь, корректность, инициативность;\\r\\n~Уверенный пользователь ПК;\\r\\n\\r\\nОбязанности:\\r\\n~Консультация клиентов в магазине, по телефону и онлайн;\\r\\n~Продажа продуктов спортивного питания;\\r\\n~Выкладка товара;\\r\\n~Работа с кассой, программой учета товара и сайтом;\\r\\n~Поддержание чистоты и порядка в магазине;\\r\\n~Выполнение плана продаж;\\r\\n\\r\\nУсловия:\\r\\n~Заработная плата = оклад + бонус;\\r\\n~Оформление по ТК;\\r\\n~Большие скидки на нашу продукцию;\\r\\n~График 2/2. Продолжительность рабочего дня согласно режиму работы ТЦ;\\r\\n~Работа в комфортных условиях, ТРЦ \"Arena City\" .\\r\\n\\r\\n', 'company_name': 'Монте-Кристо'}\n"
+      "['водител', 'такс']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [22/Nov/2018 19:08:41] \"POST /rank HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['водител']\n"
      ]
     }
    ],
@@ -44,9 +61,6 @@
     "\n",
     "from paper import index\n",
     "from paper.config import *\n",
-    "\n",
-    "# update index with eval_textes.csv for testing\n",
-    "# index.from_eval_texts()\n",
     "\n",
     "\n",
     "app = Flask(__name__)\n",
@@ -65,11 +79,11 @@
     "        stemmed_query = data[\"stemmed_query\"]\n",
     "        meta = data[\"meta\"]\n",
     "        \n",
-    "        docs_ids = index.search(stemmed_query)\n",
+    "        docs_ids = list(index.search(stemmed_query))\n",
     "        docs = index.get_docs(docs_ids)\n",
-    "        print(docs[0])\n",
     "        ranked = [doc['text'] for doc in docs]\n",
-    "        return json.dumps({'status':'ok', 'ranked': ranked})\n",
+    "#         print(stemmed_query)\n",
+    "        return json.dumps({'status':'ok', 'ranked_ids': docs_ids})\n",
     "    else:\n",
     "        return \"post json {'meta': meta, 'stemmed_query': stemmed_query}\"\n",
     "\n",
@@ -103,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "varInspector": {
    "cols": {
