--- a/search.ipynb
+++ b/search.ipynb
@@ -11,48 +11,68 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: Do not use the development server in a production environment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "[2018-11-21 23:05:35,020] ERROR in app: Exception on /search [POST]\n",
+      "195.123.10.42 - - [22/Nov/2018 18:06:31] \"GET / HTTP/1.1\" 200 -\n",
+      "195.123.10.42 - - [22/Nov/2018 18:06:35] \"POST /search HTTP/1.1\" 200 -\n",
+      "195.123.10.42 - - [22/Nov/2018 18:09:10] \"POST /search HTTP/1.1\" 200 -\n",
+      "[2018-11-22 18:12:56,548] ERROR in app: Exception on /search [POST]\n",
       "Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1982, in wsgi_app\n",
       "    response = self.full_dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1815, in full_dispatch_request\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1614, in full_dispatch_request\n",
       "    rv = self.handle_user_exception(e)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1718, in handle_user_exception\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1517, in handle_user_exception\n",
       "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/_compat.py\", line 35, in reraise\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/_compat.py\", line 33, in reraise\n",
       "    raise value\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1813, in full_dispatch_request\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1612, in full_dispatch_request\n",
       "    rv = self.dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1598, in dispatch_request\n",
       "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-2-087ff7a4927c>\", line 36, in search\n",
+      "  File \"<ipython-input-5-7b047931d4c3>\", line 37, in search\n",
       "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
-      "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
+      "  File \"/mnt/storage2/Git/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
       "    json=json).text)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/__init__.py\", line 354, in loads\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/json/__init__.py\", line 354, in loads\n",
       "    return _default_decoder.decode(s)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 339, in decode\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/json/decoder.py\", line 339, in decode\n",
       "    obj, end = self.raw_decode(s, idx=_w(s, 0).end())\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
       "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
       "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "127.0.0.1 - - [21/Nov/2018 23:05:35] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
-      "127.0.0.1 - - [21/Nov/2018 23:06:31] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+      "195.123.10.42 - - [22/Nov/2018 18:12:56] \"POST /search HTTP/1.1\" 500 -\n",
+      "[2018-11-22 19:07:34,498] ERROR in app: Exception on /search [POST]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1982, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1614, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1517, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/_compat.py\", line 33, in reraise\n",
+      "    raise value\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1612, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1598, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"<ipython-input-5-7b047931d4c3>\", line 37, in search\n",
+      "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
+      "  File \"/mnt/storage2/Git/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
+      "    json=json).text)\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/json/__init__.py\", line 354, in loads\n",
+      "    return _default_decoder.decode(s)\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/json/decoder.py\", line 339, in decode\n",
+      "    obj, end = self.raw_decode(s, idx=_w(s, 0).end())\n",
+      "  File \"/usr/local/anaconda/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
+      "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
+      "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
+      "195.123.10.42 - - [22/Nov/2018 19:07:34] \"POST /search HTTP/1.1\" 500 -\n",
+      "195.123.10.42 - - [22/Nov/2018 19:08:32] \"POST /search HTTP/1.1\" 200 -\n",
+      "195.123.10.42 - - [22/Nov/2018 19:08:37] \"POST /search HTTP/1.1\" 200 -\n",
+      "195.123.10.42 - - [22/Nov/2018 19:08:41] \"POST /search HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -63,6 +83,7 @@
     "from flask import Flask\n",
     "from flask import request, render_template\n",
     "\n",
+    "from paper import index\n",
     "from paper.utils import post_request\n",
     "from paper.config import *\n",
     "\n",
@@ -86,16 +107,18 @@
     "        meta = data['meta']\n",
     "        query = data['query']\n",
     "        \n",
-    "        analyze_json = {'textes' : [query]}\n",
+    "        analyze_json = {'textes': [query]}\n",
     "        r_analyzing_query = post_request(ANALYZER_PORT, ANALYZER_PATH, analyze_json)\n",
     "        stemmed_query = r_analyzing_query['stemmed_docs'][0]\n",
     "        query_lang = r_analyzing_query['langs'][0]\n",
     "\n",
     "        query_json = {\"stemmed_query\": stemmed_query, \"meta\":\"lalka\"}  \n",
     "        r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
-    "        docs = r_rank[\"ranked\"]\n",
-    "\n",
-    "        return json.dumps({'status': \"ok\", \"results\": docs})\n",
+    "        ranked_ids = r_rank[\"ranked_ids\"]\n",
+    "        \n",
+    "        ranked_docs = index.get_docs(ranked_ids)\n",
+    "        \n",
+    "        return json.dumps({'status': \"ok\", \"results\": ranked_docs})\n",
     "    else:\n",
     "        return \"give me some text by post json {text: 'your text here'}\"\n",
     "    \n",
@@ -121,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "varInspector": {
    "cols": {
