--- a/stemmer.ipynb
+++ b/stemmer.ipynb
@@ -11,25 +11,30 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app \"__main__\" (lazy loading)\n",
-      " * Environment: production\n",
-      "   WARNING: Do not use the development server in a production environment.\n",
-      "   Use a production WSGI server instead.\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13566/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [21/Nov/2018 22:34:27] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [21/Nov/2018 22:34:45] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [21/Nov/2018 23:05:35] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [21/Nov/2018 23:06:31] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [22/Nov/2018 17:15:19] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:15:53] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:20:03] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:21:45] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:21:56] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:22:32] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:24:09] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:24:10] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:24:23] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:24:47] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:25:33] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:25:36] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:25:52] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:30:21] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:30:28] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:30:28] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:30:42] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:30:49] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:34:18] \"POST /stemmer HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [22/Nov/2018 17:34:54] \"POST /stemmer HTTP/1.1\" 200 -\n"
      ]
     }
    ],
@@ -120,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "varInspector": {
    "cols": {
