rewrite index to recalculate tf-idf; get_docs function must be rewritten respectively from using sinter() to using zinterstore(); index updater works, but do not check correctnes of tf-idf;

--- a/analyzer.ipynb
+++ b/analyzer.ipynb
@@ -5,35 +5,29 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-21T20:34:10.046Z"
+     "start_time": "2018-11-25T14:12:44.634Z"
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: Do not use the development server in a production environment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13571/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [22/Nov/2018 17:15:19] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:15:53] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:20:03] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:21:45] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:21:56] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:22:32] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:09] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:10] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:23] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:47] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:25:33] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:25:36] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:25:52] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:21] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:28] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:28] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:42] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:49] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:34:19] \"POST /analyze HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:34:54] \"POST /analyze HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [25/Nov/2018 16:13:33] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [25/Nov/2018 16:14:34] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [25/Nov/2018 16:15:36] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -104,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
