--- a/updater.ipynb
+++ b/updater.ipynb
@@ -5,39 +5,27 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-20T20:30:33.551Z"
-    }
+     "start_time": "2018-11-25T14:17:27.053Z"
+    },
+    "scrolled": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: Do not use the development server in a production environment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:13572/ (Press CTRL+C to quit)\n",
-      "[2018-11-22 19:10:45,455] ERROR in app: Exception on /update [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1982, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1614, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1517, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/_compat.py\", line 33, in reraise\n",
-      "    raise value\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1612, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1598, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-1-05f6a60259f4>\", line 29, in update\n",
-      "    ids_of_updated = index.update_index(docs, stemmed_docs)\n",
-      "  File \"/mnt/storage2/Git/jooble-ir-2018-paper/paper/index.py\", line 35, in update_index\n",
-      "    pipe.zadd(tok, tf, doc_id)\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/redis/client.py\", line 2263, in zadd\n",
-      "    for pair in iteritems(mapping):\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/redis/_compat.py\", line 123, in iteritems\n",
-      "    return iter(x.items())\n",
-      "AttributeError: 'int' object has no attribute 'items'\n",
-      "127.0.0.1 - - [22/Nov/2018 19:10:45] \"POST /update HTTP/1.1\" 500 -\n"
+      " * Running on http://0.0.0.0:13572/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -108,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
