--- a/lang_detection.ipynb
+++ b/lang_detection.ipynb
@@ -5,39 +5,29 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-21T20:34:13.903Z"
+     "start_time": "2018-11-25T14:12:43.210Z"
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: Do not use the development server in a production environment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13567/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [22/Nov/2018 17:05:11] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:06:40] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:13:06] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:13:51] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:15:18] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:15:52] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:20:01] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:21:45] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:21:56] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:22:32] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:09] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:10] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:23] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:24:47] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:25:33] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:25:36] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:25:52] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:19] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:28] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:28] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:42] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:30:49] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:33:34] \"POST /lang_detect HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [22/Nov/2018 17:34:54] \"POST /lang_detect HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [25/Nov/2018 16:13:33] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [25/Nov/2018 16:14:34] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [25/Nov/2018 16:15:36] \"\u001b[37mPOST /lang_detect HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -98,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
