--- a/rank.ipynb
+++ b/rank.ipynb
@@ -5,51 +5,26 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-21T21:06:27.200Z"
+     "start_time": "2018-11-25T14:17:14.617Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " * Running on http://0.0.0.0:13570/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [22/Nov/2018 19:08:32] \"POST /rank HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['водител', 'такс']\n"
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: Do not use the development server in a production environment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [22/Nov/2018 19:08:37] \"POST /rank HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['водител', 'такс']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [22/Nov/2018 19:08:41] \"POST /rank HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['водител']\n"
+      " * Running on http://0.0.0.0:13570/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -117,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
