--- a/search.ipynb
+++ b/search.ipynb
@@ -5,74 +5,55 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-21T20:34:55.858Z"
+     "start_time": "2018-11-25T14:14:25.885Z"
     },
     "scrolled": true
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app \"__main__\" (lazy loading)\n",
+      " * Environment: production\n",
+      "   WARNING: Do not use the development server in a production environment.\n",
+      "   Use a production WSGI server instead.\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "195.123.10.42 - - [22/Nov/2018 18:06:31] \"GET / HTTP/1.1\" 200 -\n",
-      "195.123.10.42 - - [22/Nov/2018 18:06:35] \"POST /search HTTP/1.1\" 200 -\n",
-      "195.123.10.42 - - [22/Nov/2018 18:09:10] \"POST /search HTTP/1.1\" 200 -\n",
-      "[2018-11-22 18:12:56,548] ERROR in app: Exception on /search [POST]\n",
+      "127.0.0.1 - - [25/Nov/2018 16:14:28] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [25/Nov/2018 16:14:30] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "[2018-11-25 16:14:34,123] ERROR in app: Exception on /search [POST]\n",
       "Traceback (most recent call last):\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1982, in wsgi_app\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
       "    response = self.full_dispatch_request()\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1614, in full_dispatch_request\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1815, in full_dispatch_request\n",
       "    rv = self.handle_user_exception(e)\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1517, in handle_user_exception\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1718, in handle_user_exception\n",
       "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/_compat.py\", line 33, in reraise\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/_compat.py\", line 35, in reraise\n",
       "    raise value\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1612, in full_dispatch_request\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1813, in full_dispatch_request\n",
       "    rv = self.dispatch_request()\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1598, in dispatch_request\n",
+      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
       "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-5-7b047931d4c3>\", line 37, in search\n",
+      "  File \"<ipython-input-1-b28252fefcc8>\", line 37, in search\n",
       "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
-      "  File \"/mnt/storage2/Git/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
+      "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
       "    json=json).text)\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/json/__init__.py\", line 354, in loads\n",
+      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/__init__.py\", line 354, in loads\n",
       "    return _default_decoder.decode(s)\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/json/decoder.py\", line 339, in decode\n",
+      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 339, in decode\n",
       "    obj, end = self.raw_decode(s, idx=_w(s, 0).end())\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
+      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
       "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
       "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "195.123.10.42 - - [22/Nov/2018 18:12:56] \"POST /search HTTP/1.1\" 500 -\n",
-      "[2018-11-22 19:07:34,498] ERROR in app: Exception on /search [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1982, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1614, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1517, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/_compat.py\", line 33, in reraise\n",
-      "    raise value\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1612, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/site-packages/flask/app.py\", line 1598, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-5-7b047931d4c3>\", line 37, in search\n",
-      "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
-      "  File \"/mnt/storage2/Git/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
-      "    json=json).text)\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/json/__init__.py\", line 354, in loads\n",
-      "    return _default_decoder.decode(s)\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/json/decoder.py\", line 339, in decode\n",
-      "    obj, end = self.raw_decode(s, idx=_w(s, 0).end())\n",
-      "  File \"/usr/local/anaconda/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
-      "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
-      "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "195.123.10.42 - - [22/Nov/2018 19:07:34] \"POST /search HTTP/1.1\" 500 -\n",
-      "195.123.10.42 - - [22/Nov/2018 19:08:32] \"POST /search HTTP/1.1\" 200 -\n",
-      "195.123.10.42 - - [22/Nov/2018 19:08:37] \"POST /search HTTP/1.1\" 200 -\n",
-      "195.123.10.42 - - [22/Nov/2018 19:08:41] \"POST /search HTTP/1.1\" 200 -\n"
+      "127.0.0.1 - - [25/Nov/2018 16:14:34] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n"
      ]
     }
    ],
@@ -144,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
