index search function modification - cache query for 90 sec added & if query consist of 1 word - using just redis_connector.zrange() function

--- a/stemmer.ipynb
+++ b/stemmer.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-25T22:19:07.799Z"
+     "end_time": "2018-11-27T11:33:08.898911Z",
+     "start_time": "2018-11-27T11:00:19.250190Z"
     },
     "scrolled": true
    },
@@ -26,37 +27,29 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13566/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [26/Nov/2018 00:20:56] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:21:56] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:28:45] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:29:07] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:29:50] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:30:27] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:31:12] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:33:17] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:34:37] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:34:56] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:37:39] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:56:45] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:59:46] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:02:05] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:02:44] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:03:23] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:04:01] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:05:17] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [27/Nov/2018 13:00:32] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:02:02] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:02:32] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:02:49] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:25:31] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:26:06] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:26:10] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:28:03] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:29:22] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:32:25] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:32:35] \"\u001b[37mPOST /stemmer HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
    "source": [
     "import json\n",
     "\n",
-    "\n",
     "from flask import Flask\n",
     "from flask import request\n",
     "import nltk\n",
     "from nltk import wordpunct_tokenize\n",
     "\n",
-    "from paper.config import *\n",
+    "from paper.config import STEMMER_PATH, STEMMER_PORT\n",
     "\n",
     "\n",
     "app = Flask(__name__)\n",
@@ -96,26 +89,6 @@
     "if __name__ == \"__main__\":\n",
     "    app.run(host='0.0.0.0', port=STEMMER_PORT)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "singles = [stemmer.stem(plural) for plural in plurals]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
