--- a/analyzer.ipynb
+++ b/analyzer.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-25T22:19:14.394Z"
+     "end_time": "2018-11-27T11:32:57.187128Z",
+     "start_time": "2018-11-27T10:59:59.403563Z"
     }
    },
    "outputs": [
@@ -25,24 +26,17 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13571/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [26/Nov/2018 00:20:56] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:21:56] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:28:45] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:29:07] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:29:50] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:30:27] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:31:12] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:33:17] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:34:37] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:34:56] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:37:39] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:56:45] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:59:46] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:02:05] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:02:44] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:03:23] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:04:01] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:05:17] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [27/Nov/2018 13:00:32] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:02:02] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:02:32] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:02:49] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:25:31] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:26:06] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:26:10] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:28:03] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:29:22] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:32:25] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:32:35] \"\u001b[37mPOST /analyze HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -54,7 +48,8 @@
     "from flask import Flask\n",
     "from flask import request\n",
     "\n",
-    "from paper.config import *\n",
+    "from paper.config import ANALYZER_PATH, ANALYZER_PORT\n",
+    "from paper.config import LANGDETECT_PORT, LANGDETECT_PATH, STEMMER_PORT, STEMMER_PATH\n",
     "from paper.analyze import normalize\n",
     "from paper.utils import post_request\n",
     "\n",
@@ -102,18 +97,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
