--- a/rank.ipynb
+++ b/rank.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-25T23:03:20.600Z"
+     "end_time": "2018-11-27T11:32:53.585237Z",
+     "start_time": "2018-11-27T11:29:15.798703Z"
     }
    },
    "outputs": [
@@ -25,29 +26,15 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13570/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [26/Nov/2018 01:03:23] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [27/Nov/2018 13:29:22] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('10', 9.397940008672037), ('23', 9.397940008672037), ('90', 9.397940008672037), ('24', 13.881896937389754)]\n",
-      "['10', '23', '90', '24']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [26/Nov/2018 01:04:01] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('22', 9.698970004336017), ('27', 9.698970004336017)]\n",
+      "using chache\n",
+      "[('22', 19.397940008672034), ('27', 19.397940008672034)]\n",
       "['22', '27']\n"
      ]
     },
@@ -55,15 +42,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [26/Nov/2018 01:05:17] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [27/Nov/2018 13:32:25] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('56', 13.010299956639813)]\n",
-      "['56']\n"
+      "do no use chahe\n",
+      "[('22', 19.397940008672034), ('27', 19.397940008672034)]\n",
+      "['22', '27']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [27/Nov/2018 13:32:35] \"\u001b[37mPOST /rank HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using chache\n",
+      "[('22', 19.397940008672034), ('27', 19.397940008672034)]\n",
+      "['22', '27']\n"
      ]
     }
    ],
@@ -74,7 +78,7 @@
     "from flask import request\n",
     "\n",
     "from paper import index\n",
-    "from paper.config import *\n",
+    "from paper.config import RANK_PATH, RANK_PORT\n",
     "\n",
     "\n",
     "app = Flask(__name__)\n",
@@ -93,13 +97,12 @@
     "        stemmed_query = data[\"stemmed_query\"]\n",
     "        meta = data[\"meta\"]\n",
     "        \n",
-    "        docs_ids = index.search(stemmed_query)[0]\n",
-    "        print(docs_ids)\n",
-    "        docs_ids = [items[0] for items in docs_ids]\n",
+    "        docs_scores = index.search(stemmed_query)\n",
+    "        print(docs_scores)\n",
+    "        docs_ids = [items[0] for items in docs_scores]\n",
     "        docs = index.get_docs(docs_ids)\n",
     "        print(docs_ids)\n",
     "        ranked = [doc['text'] for doc in docs]\n",
-    "#         print(stemmed_query)\n",
     "        return json.dumps({'status':'ok', 'ranked_ids': docs_ids})\n",
     "    else:\n",
     "        return \"post json {'meta': meta, 'stemmed_query': stemmed_query}\"\n",
@@ -123,6 +126,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   },
   "varInspector": {
    "cols": {
