--- a/search.ipynb
+++ b/search.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-11-25T22:34:54.519Z"
+     "end_time": "2018-11-27T11:33:05.188757Z",
+     "start_time": "2018-11-27T11:00:13.690612Z"
     },
     "scrolled": true
    },
@@ -26,7 +27,14 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:13568/ (Press CTRL+C to quit)\n",
-      "[2018-11-26 00:34:56,672] ERROR in app: Exception on /search [POST]\n",
+      "127.0.0.1 - - [27/Nov/2018 13:00:23] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:00:25] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:00:32] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:02:02] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:02:32] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:02:49] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:25:31] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "[2018-11-27 13:26:06,323] ERROR in app: Exception on /search [POST]\n",
       "Traceback (most recent call last):\n",
       "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
       "    response = self.full_dispatch_request()\n",
@@ -40,7 +48,7 @@
       "    rv = self.dispatch_request()\n",
       "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
       "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-2-b28252fefcc8>\", line 37, in search\n",
+      "  File \"<ipython-input-1-b28252fefcc8>\", line 37, in search\n",
       "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
       "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
       "    json=json).text)\n",
@@ -51,8 +59,8 @@
       "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
       "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
       "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "127.0.0.1 - - [26/Nov/2018 00:34:56] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
-      "[2018-11-26 00:37:39,806] ERROR in app: Exception on /search [POST]\n",
+      "127.0.0.1 - - [27/Nov/2018 13:26:06] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
+      "[2018-11-27 13:26:10,115] ERROR in app: Exception on /search [POST]\n",
       "Traceback (most recent call last):\n",
       "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
       "    response = self.full_dispatch_request()\n",
@@ -66,7 +74,7 @@
       "    rv = self.dispatch_request()\n",
       "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
       "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-2-b28252fefcc8>\", line 37, in search\n",
+      "  File \"<ipython-input-1-b28252fefcc8>\", line 37, in search\n",
       "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
       "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
       "    json=json).text)\n",
@@ -77,9 +85,8 @@
       "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
       "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
       "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "127.0.0.1 - - [26/Nov/2018 00:37:39] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
-      "127.0.0.1 - - [26/Nov/2018 00:55:56] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "[2018-11-26 00:56:45,539] ERROR in app: Exception on /search [POST]\n",
+      "127.0.0.1 - - [27/Nov/2018 13:26:10] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
+      "[2018-11-27 13:28:03,081] ERROR in app: Exception on /search [POST]\n",
       "Traceback (most recent call last):\n",
       "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
       "    response = self.full_dispatch_request()\n",
@@ -93,7 +100,7 @@
       "    rv = self.dispatch_request()\n",
       "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
       "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-2-b28252fefcc8>\", line 37, in search\n",
+      "  File \"<ipython-input-1-b28252fefcc8>\", line 37, in search\n",
       "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
       "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
       "    json=json).text)\n",
@@ -104,95 +111,10 @@
       "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
       "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
       "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "127.0.0.1 - - [26/Nov/2018 00:56:45] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
-      "[2018-11-26 00:59:46,602] ERROR in app: Exception on /search [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1815, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1718, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/_compat.py\", line 35, in reraise\n",
-      "    raise value\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1813, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-2-b28252fefcc8>\", line 37, in search\n",
-      "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
-      "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
-      "    json=json).text)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/__init__.py\", line 354, in loads\n",
-      "    return _default_decoder.decode(s)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 339, in decode\n",
-      "    obj, end = self.raw_decode(s, idx=_w(s, 0).end())\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
-      "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
-      "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "127.0.0.1 - - [26/Nov/2018 00:59:46] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
-      "[2018-11-26 01:02:05,479] ERROR in app: Exception on /search [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1815, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1718, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/_compat.py\", line 35, in reraise\n",
-      "    raise value\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1813, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-2-b28252fefcc8>\", line 37, in search\n",
-      "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
-      "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
-      "    json=json).text)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/__init__.py\", line 354, in loads\n",
-      "    return _default_decoder.decode(s)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 339, in decode\n",
-      "    obj, end = self.raw_decode(s, idx=_w(s, 0).end())\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
-      "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
-      "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [26/Nov/2018 01:02:05] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
-      "[2018-11-26 01:02:44,479] ERROR in app: Exception on /search [POST]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 2292, in wsgi_app\n",
-      "    response = self.full_dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1815, in full_dispatch_request\n",
-      "    rv = self.handle_user_exception(e)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1718, in handle_user_exception\n",
-      "    reraise(exc_type, exc_value, tb)\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/_compat.py\", line 35, in reraise\n",
-      "    raise value\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1813, in full_dispatch_request\n",
-      "    rv = self.dispatch_request()\n",
-      "  File \"/usr/local/lib/python3.6/site-packages/flask/app.py\", line 1799, in dispatch_request\n",
-      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
-      "  File \"<ipython-input-2-b28252fefcc8>\", line 37, in search\n",
-      "    r_rank = post_request(RANK_PORT, RANK_PATH, query_json)\n",
-      "  File \"/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/paper/utils.py\", line 16, in post_request\n",
-      "    json=json).text)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/__init__.py\", line 354, in loads\n",
-      "    return _default_decoder.decode(s)\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 339, in decode\n",
-      "    obj, end = self.raw_decode(s, idx=_w(s, 0).end())\n",
-      "  File \"/usr/local/Cellar/python/3.6.5/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/decoder.py\", line 357, in raw_decode\n",
-      "    raise JSONDecodeError(\"Expecting value\", s, err.value) from None\n",
-      "json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)\n",
-      "127.0.0.1 - - [26/Nov/2018 01:02:44] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:03:23] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:04:01] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:05:06] \"\u001b[37mGET /? HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [26/Nov/2018 01:05:17] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [27/Nov/2018 13:28:03] \"\u001b[1m\u001b[35mPOST /search HTTP/1.1\u001b[0m\" 500 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:29:22] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:32:25] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [27/Nov/2018 13:32:35] \"\u001b[37mPOST /search HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -205,7 +127,9 @@
     "\n",
     "from paper import index\n",
     "from paper.utils import post_request\n",
-    "from paper.config import *\n",
+    "\n",
+    "from paper.config import SEARCH_PATH, SEARCH_PORT\n",
+    "from paper.config import RANK_PATH, RANK_PORT, ANALYZER_PATH, ANALYZER_PORT\n",
     "\n",
     "\n",
     "app = Flask(__name__)\n",
