--- a/json_processing.ipynb
+++ b/json_processing.ipynb
@@ -7,7 +7,8 @@
     "ExecuteTime": {
      "end_time": "2018-11-25T22:19:18.870655Z",
      "start_time": "2018-11-25T22:19:18.491195Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "'/Users/oyvsyo/proj/jooble/IR/jooble-ir-2018-paper/Data/by'"
+       "'/mnt/storage2/Git/jooble-ir-2018-paper/Data/by'"
       ]
      },
      "execution_count": 2,
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-11-25T22:19:22.590379Z",
@@ -59,19 +60,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "707\n"
+      "101775\n"
      ]
     }
    ],
    "source": [
+    "by_dir = \"/mnt/storage2/Data/by\"\n",
     "list_json = []\n",
     "\n",
-    "start_date = date(2017, 1, 1)\n",
+    "start_date = date(2017, 3, 1)\n",
     "# end_date = date(2017, 1, 30)\n",
-    "end_date = date(2017, 1, 2)\n",
+    "end_date = date(2017, 3, 3)\n",
     "\n",
     "date_range = pd.date_range(start_date, end_date)\n",
-    "    \n",
+    "\n",
     "#looping through all days from 2017_01_1 to 2017_01_30 with step = 1 day\n",
     "for single_date in date_range:\n",
     "    date_ = single_date.strftime(\"%Y-%m-%d\")\n",
@@ -82,6 +84,7 @@
     "\n",
     "    #reading two files simuntaneously\n",
     "    document_job, document_job_text = [],[]\n",
+    "    \n",
     "    with gzip.open(file_job, \"rb\") as f1, gzip.open(file_job_text, \"rb\") as f2: \n",
     "        for line1, line2 in zip(f1, f2):\n",
     "            vacation_job = json.loads(line1)\n",
@@ -112,6 +115,259 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat: /mnt/storage2/Git/jooble-ir-2018-paper/Data/by/by_job_2017-03-02.json.gz: No such file or directory\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! cat /mnt/storage2/Git/jooble-ir-2018-paper/Data/by/by_job_2017-03-02.json.gz\n",
+    "! Data/by/\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stemm_d: 1996.782083272934\n"
+     ]
+    }
+   ],
+   "source": [
+    "from paper.analyze import norm_stem_lang\n",
+    "from paper.analyze import normalize\n",
+    "\n",
+    "\n",
+    "@timed\n",
+    "def stemm_d(list_json):\n",
+    "    # stemmed = [norm_stem_lang(doc['title']+ ' ' + doc['text']).split() for doc in list_json]\n",
+    "    stemmed = []\n",
+    "    for doc in list_json:\n",
+    "        try:\n",
+    "            stemmed.append(norm_stem_lang(doc['title']+ ' ' + doc['text']).split())\n",
+    "        except:\n",
+    "            pass\n",
+    "        \n",
+    "stemm_d(list_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# stemmed[25:30]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'company_name': '',\n",
+       " 'id': '-4161554798960957173',\n",
+       " 'lang_text': 'ru',\n",
+       " 'lang_title': 'ru',\n",
+       " 'salary_val1': '',\n",
+       " 'salary_val2': '',\n",
+       " 'text': 'Требуется SEO специалист знающий специфику продвижения в США, требуется подвинуть сайт по 2-3 ВЧ запросам по одному штату.',\n",
+       " 'title': 'SEO-оптимизатор. Продвижение сайта в США (удаленно)',\n",
+       " 'title_normalized': 'seo оптимизатор продвижение сайта в сша удаленно',\n",
+       " 'url': 'https://www.fl.ru/projects/3085129/prodvijenie-sayta-v-ssha-.html?utm_source=joobleby&utm_medium=cpc&utm_campaign=jooble'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_json[24]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# list_json[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "update_timed: 33.62377214431763\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "from paper import index\n",
+    "from paper.utils import timed\n",
+    "\n",
+    "@timed\n",
+    "def update_timed(list_json, stemmed):\n",
+    "    index.update_index(list_json, stemmed)\n",
+    "\n",
+    "# index.delete_all()\n",
+    "update_timed(list_json, stemmed);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{b'10046',\n",
+       " b'1047',\n",
+       " b'1196',\n",
+       " b'122',\n",
+       " b'127',\n",
+       " b'1427',\n",
+       " b'1700',\n",
+       " b'1724',\n",
+       " b'2082',\n",
+       " b'2164',\n",
+       " b'2262',\n",
+       " b'239',\n",
+       " b'2507',\n",
+       " b'2557',\n",
+       " b'2628',\n",
+       " b'2677',\n",
+       " b'2696',\n",
+       " b'2874',\n",
+       " b'292',\n",
+       " b'2998',\n",
+       " b'3050',\n",
+       " b'3252',\n",
+       " b'3309',\n",
+       " b'3461',\n",
+       " b'3623',\n",
+       " b'3766',\n",
+       " b'3961',\n",
+       " b'4058',\n",
+       " b'4472',\n",
+       " b'4880',\n",
+       " b'4893',\n",
+       " b'5230',\n",
+       " b'5278',\n",
+       " b'5364',\n",
+       " b'5404',\n",
+       " b'5676',\n",
+       " b'5882',\n",
+       " b'5969',\n",
+       " b'6131',\n",
+       " b'6144',\n",
+       " b'6541',\n",
+       " b'6571',\n",
+       " b'6823',\n",
+       " b'7058',\n",
+       " b'7154',\n",
+       " b'7217',\n",
+       " b'7761',\n",
+       " b'781',\n",
+       " b'7885',\n",
+       " b'8',\n",
+       " b'8035',\n",
+       " b'8516',\n",
+       " b'866',\n",
+       " b'8992',\n",
+       " b'9050',\n",
+       " b'9368',\n",
+       " b'9509',\n",
+       " b'966',\n",
+       " b'9695'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from redis import Redis\n",
+    "\n",
+    "\n",
+    "tokens = [\"inv+ \"+tok for tok in ['водител', 'такс']]\n",
+    "r = Redis()\n",
+    "r.sinter(*tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting redis==2.10.6\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3b/f6/7a76333cf0b9251ecf49efff635015171843d9b977e4ffcf59f9c4428052/redis-2.10.6-py2.py3-none-any.whl (64kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 71kB 1.1MB/s ta 0:00:011\n",
+      "\u001b[?25hInstalling collected packages: redis\n",
+      "  Found existing installation: redis 3.0.0.post1\n",
+      "    Uninstalling redis-3.0.0.post1:\n",
+      "      Successfully uninstalled redis-3.0.0.post1\n",
+      "Successfully installed redis-2.10.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install redis==2.10.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from paper.index import get_docs\n",
+    "\n",
+    "get_docs([1,2])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -120,126 +376,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-25T22:30:28.584135Z",
-     "start_time": "2018-11-25T22:30:26.060368Z"
-    },
-    "scrolled": true
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'ids': [0,\n",
-       "  1,\n",
-       "  2,\n",
-       "  3,\n",
-       "  4,\n",
-       "  5,\n",
-       "  6,\n",
-       "  7,\n",
-       "  8,\n",
-       "  9,\n",
-       "  10,\n",
-       "  11,\n",
-       "  12,\n",
-       "  13,\n",
-       "  14,\n",
-       "  15,\n",
-       "  16,\n",
-       "  17,\n",
-       "  18,\n",
-       "  19,\n",
-       "  20,\n",
-       "  21,\n",
-       "  22,\n",
-       "  23,\n",
-       "  24,\n",
-       "  25,\n",
-       "  26,\n",
-       "  27,\n",
-       "  28,\n",
-       "  29,\n",
-       "  30,\n",
-       "  31,\n",
-       "  32,\n",
-       "  33,\n",
-       "  34,\n",
-       "  35,\n",
-       "  36,\n",
-       "  37,\n",
-       "  38,\n",
-       "  39,\n",
-       "  40,\n",
-       "  41,\n",
-       "  42,\n",
-       "  43,\n",
-       "  44,\n",
-       "  45,\n",
-       "  46,\n",
-       "  47,\n",
-       "  48,\n",
-       "  49,\n",
-       "  50,\n",
-       "  51,\n",
-       "  52,\n",
-       "  53,\n",
-       "  54,\n",
-       "  55,\n",
-       "  56,\n",
-       "  57,\n",
-       "  58,\n",
-       "  59,\n",
-       "  60,\n",
-       "  61,\n",
-       "  62,\n",
-       "  63,\n",
-       "  64,\n",
-       "  65,\n",
-       "  66,\n",
-       "  67,\n",
-       "  68,\n",
-       "  69,\n",
-       "  70,\n",
-       "  71,\n",
-       "  72,\n",
-       "  73,\n",
-       "  74,\n",
-       "  75,\n",
-       "  76,\n",
-       "  77,\n",
-       "  78,\n",
-       "  79,\n",
-       "  80,\n",
-       "  81,\n",
-       "  82,\n",
-       "  83,\n",
-       "  84,\n",
-       "  85,\n",
-       "  86,\n",
-       "  87,\n",
-       "  88,\n",
-       "  89,\n",
-       "  90,\n",
-       "  91,\n",
-       "  92,\n",
-       "  93,\n",
-       "  94,\n",
-       "  95,\n",
-       "  96,\n",
-       "  97,\n",
-       "  98,\n",
-       "  99],\n",
-       " 'status': 'ok'}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from paper.utils import post_request as post\n",
     "from paper.index import delete_all\n",
@@ -250,40 +391,6 @@
     "\n",
     "post(UPDATER_PORT, UPDATER_PATH, update_json)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-11-25T22:24:08.226292Z",
-     "start_time": "2018-11-25T22:24:08.219243Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{}, {}]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from paper.index import get_docs\n",
-    "\n",
-    "get_docs([1,2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -302,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "varInspector": {
    "cols": {
