--- a/stemmer.ipynb
+++ b/stemmer.ipynb
@@ -51,6 +51,7 @@
     "\n",
     "from paper.config import STEMMER_PATH, STEMMER_PORT\n",
     "\n",
+    "from paper.analyze import normalize_and_stemm\n",
     "\n",
     "app = Flask(__name__)\n",
     "\n",
@@ -69,19 +70,7 @@
     "        textes = data[\"textes\"]\n",
     "        langs = data[\"langs\"]\n",
     "        \n",
-    "        stemmer_ru = nltk.stem.snowball.RussianStemmer()\n",
-    "        stemmer_en = nltk.stem.porter.PorterStemmer()\n",
-    "        stemmed = []\n",
     "        \n",
-    "        for text, lang in zip(textes, langs):\n",
-    "            tokens = wordpunct_tokenize(text)\n",
-    "            if lang=='ru': \n",
-    "                stemmed.append([stemmer_ru.stem(tok) for tok in tokens])\n",
-    "            elif lang=='en':\n",
-    "                stemmed.append([stemmer_en.stem(tok) for tok in tokens])\n",
-    "            else:\n",
-    "                stemmed.append(tokens)\n",
-    "\n",
     "        return json.dumps({'stemmed': stemmed})\n",
     "    else:\n",
     "        return \"provide json {'textes': 'textes', 'lang': 'lang'}\"\n",
@@ -107,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "varInspector": {
    "cols": {
